Fixed spacing for simon buttons (optical illusion?)

--- a/public/style.css
+++ b/public/style.css
@@ -528,7 +528,7 @@ h1 {
     transform: rotate(-45deg);
 }
 .simon-buttons button {
-    margin: 5px 2.5px;
+    margin: 5px 2px;
     height: 75px;
     width: 75px;
 }
